feat: :sparkles: Final test exceptions
Add some exceptions to the entities