@@ -1,5 +1,6 @@
 package com.leprechauns.main.Service;
 
+import com.leprechauns.main.Exceptions.DataAccessException;
 import com.leprechauns.main.Exceptions.NotFoundEndPoint;
 import com.leprechauns.main.Entity.ChanceList;
 import com.leprechauns.main.Entity.Customer;
@@ -9,7 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Map;
-
+import java.util.stream.Collectors;
 
 @Service
 public class CustomerService {
@@ -22,9 +23,14 @@ public class CustomerService {
     }
 
     public List<CustomerDTO> getAllCustomers() {
-        return customerRepository.findAll().stream()
-                .map(Customer::toDTO)
-                .toList();
+
+        try {
+            return customerRepository.findAll().stream()
+                    .map(Customer::toDTO)
+                    .toList();
+        } catch (Exception e) {
+            throw new DataAccessException("Error getting all clients: " + e.getMessage());
+        }
     }
 
     public List<CustomerDTO> findByCountryLikeIgnoreCase() {
@@ -33,13 +39,19 @@ public class CustomerService {
                 .toList();
     }
 
-    public List<CustomerDTO> findCustomersMadrid(String city, String sales, int employee) {
-        return customerRepository.findCustomersMadrid(city, sales, employee).stream()
+    public List<CustomerDTO> findCustomersMadrid(String city, int sales, int employee) {
+
+        List<Customer> customers = customerRepository.findCustomersMadrid(city, sales, employee);
+        if (customers.isEmpty()) {
+            throw new NotFoundEndPoint("No clients found that meet the conditions");
+        }
+        return customers.stream()
                 .map(Customer::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     };
 
     public List<CustomerDTO> findNameSpain(String country) {
+
         return customerRepository.findNameSpain(country).stream()
                 .map(Customer::toDTO)
                 .toList();
@@ -51,7 +63,6 @@ public class CustomerService {
 
     public List<Map<Object, Object>> clientsWithoutPaymentsAndRepresentatives() {
         List<Object[]> results = customerRepository.clientsWithoutPaymentsAndRepresentatives();
-        ;
         return ChanceList.chanceList(results, "customerId", "customerName", "sales");
     }
 
@@ -112,7 +123,7 @@ public class CustomerService {
         if (!existsCity) {
             throw new NotFoundEndPoint("The city " + city + " doesn't exist in the database.");
         }
-    
+
         return customerRepository.clientsCountInCity(city);
     }
 
